Add keywords for seo

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="StartUp Story ,StartUp ,Startup business advisor,Startup business advisor,Professional consultants"/>
     <meta
       name="description"
-      content="StartUp Story is a Best For Your Business or StartUp"
+      content="StartUp Story is the Best For Business or StartUp to grow your business and manage your consultancy farm"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
   
